<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_name"
    />
    <EditText
            android:id="@+id/moviename"
            android:inputType="text"
            android:hint="Enter the title of movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />
    <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_desc"
    />
    <EditText
            android:id="@+id/moviedesc"
            android:inputType="textShortMessage"
            android:hint="Enter a short description of the movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
    />
    <RadioGroup
            android:id="@+id/languages"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RadioButton
                android:id="@+id/eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english_text"/>
        <RadioButton
                android:id="@+id/chi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chinese_text"/>
        <RadioButton
                android:id="@+id/mal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/malay_text"/>
        <RadioButton
                android:id="@+id/tam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tamil_text"/>
    </RadioGroup>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
    />
    <EditText
            android:id="@+id/releasedate"
            android:inputType="date"
            android:hint="Enter release date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />
    <CheckBox
            android:id="@+id/unsuitableforaudience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unsuitable_for_audience_text"
    />
    <LinearLayout
            android:id="@+id/not_suitableforaudience"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content" android:weightSum="2"
            android:visibility="gone">
        <CheckBox
                android:id="@+id/violenced"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/violence_text"
                android:layout_weight="1"/>
        <CheckBox
                android:id="@+id/langused"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lang_used_text"
                android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal">

    </LinearLayout>



</LinearLayout>